# math_of_realtime_graphics_wgsl_version

./: README.md  ch00_01.wgsl  ch00_02.wgsl  ch01_01.wgsl  ch01_02.wgsl  ch01_03.wgsl  ch01_04.wgsl  ch01_05.wgsl  ch01_06.wgsl  ch01_07.wgsl  ch02_01.wgsl  ch02_02.wgsl  ch03_01.wgsl  ch03_02.wgsl  ch03_03.wgsl  ch04_01.wgsl  ch04_02.wgsl  ch04_03.wgsl  ch04_04.wgsl  ch04_05.wgsl  ch05_01.wgsl  ch05_02.wgsl  ch05_03.wgsl  ch05_04.wgsl  ch05_05.wgsl  ch06_01.wgsl  ch06_02.wgsl  ch06_03.wgsl  ch06_04.wgsl  ch08_01.wgsl  ch08_02.wgsl  ch08_03.wgsl  ch08_04.wgsl  ch08_05.wgsl  ch09_01.wgsl  ch09_02.wgsl  ch09_03.wgsl  ch09_04.wgsl  ch09_05.wgsl  ch09_06.wgsl  (+1 more)
wgsl-cli/: Cargo.toml
wgsl-cli/src/: main.rs  vert.wgsl
